<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">GymLog</string>
    <string name="title_activity_main">GymLog</string>
    <string name="package_name">com.franvi.gymlog</string>
    <string name="custom_url_scheme">com.franvi.gymlog</string>
    <string name="shortcut_new_workout_short">Nuevo Entreno</string>
    <string name="shortcut_new_workout_long">Registrar nuevo entrenamiento</string>
    <string name="shortcut_stats_short">Estadísticas</string>
    <string name="shortcut_stats_long">Ver progreso y estadísticas</string>
    <string name="shortcut_disabled_message">Acceso directo no disponible</string>
</resources>
